--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,14 +12,14 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /{$HOME}/data/wordpress
+      device: /${HOME}/data/wordpress
   db:
     driver: local
     name: db
     driver_opts:
       type: none
       o: bind
-      device: /{$HOME}/data/mariadb
+      device: /${HOME}/data/mariadb
 
 services:
   mariadb:
